Release 1.1.18 linked container improvements